src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Program                            (0)
	Program -> Expr                                    (1)
	Decs -> Decs Dec                                   (2)
	Decs ->                                            (3)
	Dec -> TyDec                                       (4)
	Dec -> VarDec                                      (5)
	Dec -> FunDec                                      (6)
	TyDec -> type id '=' Ty                            (7)
	Ty -> id                                           (8)
	Ty -> '{' TyFields '}'                             (9)
	Ty -> array of id                                  (10)
	TyFields -> TyFieldsRev                            (11)
	TyFields ->                                        (12)
	TyFieldsRev -> TyField                             (13)
	TyFieldsRev -> TyFieldsRev ',' TyField             (14)
	TyField -> id ':' TypeId                           (15)
	TypeId -> id                                       (16)
	VarDec -> var id OptType ':=' Expr                 (17)
	OptType -> ':' TypeId                              (18)
	OptType ->                                         (19)
	FunDec -> function id '(' TyFields ')' OptType '=' Expr   (20)
	Expr -> Matched                                    (21)
	Expr -> Unmatched                                  (22)
	Matched -> Disjunction                             (23)
	Matched -> LValue ':=' Matched                     (24)
	Matched -> id '[' Matched ']'                      (25)
	Matched -> if Expr then Matched else Matched       (26)
	Matched -> while Expr do Matched                   (27)
	Matched -> for id ':=' Expr to Expr do Matched     (28)
	Unmatched -> LValue ':=' Unmatched                 (29)
	Unmatched -> id '[' Matched ']' of Unmatched       (30)
	Unmatched -> if Expr then Matched else Unmatched   (31)
	Unmatched -> if Expr then Matched                  (32)
	Unmatched -> while Expr do Unmatched               (33)
	Unmatched -> for id ':=' Expr to Expr do Unmatched   (34)
	LValue -> id LValue1                               (35)
	LValue1 -> '[' Matched ']' LValue1                 (36)
	LValue1 -> '.' id LValue1                          (37)
	LValue1 ->                                         (38)
	Disjunction -> Disjunction '|' Conjunction         (39)
	Disjunction -> Conjunction                         (40)
	Conjunction -> Conjunction '&' Compare             (41)
	Conjunction -> Compare                             (42)
	Compare -> ArithExpr '=' ArithExpr                 (43)
	Compare -> ArithExpr '<>' ArithExpr                (44)
	Compare -> ArithExpr '>' ArithExpr                 (45)
	Compare -> ArithExpr '<' ArithExpr                 (46)
	Compare -> ArithExpr '>=' ArithExpr                (47)
	Compare -> ArithExpr '<=' ArithExpr                (48)
	ArithExpr -> ArithExpr '+' Term                    (49)
	ArithExpr -> ArithExpr '-' Term                    (50)
	Term -> Term '*' PrefExpr                          (51)
	Term -> Term '/' PrefExpr                          (52)
	Term -> PrefExpr                                   (53)
	PrefExpr -> '-' PrefExpr                           (54)
	PrefExpr -> Factor                                 (55)
	Factor -> LValue                                   (56)
	Factor -> nil                                      (57)
	Factor -> '(' ExprSequence ')'                     (58)
	Factor -> int                                      (59)
	Factor -> string                                   (60)
	Factor -> id '(' CallArgs ')'                      (61)
	Factor -> TypeId '{' Fields '}'                    (62)
	Factor -> break                                    (63)
	Factor -> let Decs in ExprSequence end             (64)
	CallArgs -> CallArgsRev                            (65)
	CallArgs ->                                        (66)
	CallArgsRev -> Expr                                (67)
	CallArgsRev -> CallArgsRev ',' Expr                (68)
	Fields -> FieldsRev                                (69)
	Fields ->                                          (70)
	FieldsRev -> Field                                 (71)
	FieldsRev -> FieldsRev ',' Field                   (72)
	Field -> id '=' Expr                               (73)
	ExprSequence -> ExprSequenceRev                    (74)
	ExprSequence ->                                    (75)
	ExprSequenceRev -> Expr                            (76)
	ExprSequenceRev -> ExprSequenceRev ';' Expr        (77)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	while          { While _ }
	for            { For _ }
	to             { To _ }
	break          { Break _ }
	let            { Let _ }
	in             { In _ }
	end            { End _ }
	function       { Function _ }
	var            { Var _ }
	type           { Type _ }
	array          { Array _ }
	if             { If _ }
	then           { Then _ }
	else           { Else _ }
	do             { Do _ }
	of             { Of _ }
	nil            { Nil _ }
	','            { Comma _ }
	':'            { Colon _ }
	';'            { Semicolon _ }
	'('            { LParen _ }
	')'            { RParen _ }
	'['            { LBracket _ }
	']'            { RBracket _ }
	'{'            { LBrace _ }
	'}'            { RBrace _ }
	'.'            { Dot _ }
	'+'            { Plus _ }
	'-'            { Minus _ }
	'*'            { Times _ }
	'/'            { Divide _ }
	'='            { Eq _ }
	'<>'           { Neq _ }
	'<'            { Lt _ }
	'<='           { Le _ }
	'>'            { Gt _ }
	'>='           { Ge _ }
	'&'            { And _ }
	'|'            { Or _ }
	':='           { Assign _ }
	string         { StrLiteral _ $$ }
	int            { IntLiteral _ $$ }
	id             { Id _ $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Program         rule  1
	Decs            rules 2, 3
	Dec             rules 4, 5, 6
	TyDec           rule  7
	Ty              rules 8, 9, 10
	TyFields        rules 11, 12
	TyFieldsRev     rules 13, 14
	TyField         rule  15
	TypeId          rule  16
	VarDec          rule  17
	OptType         rules 18, 19
	FunDec          rule  20
	Expr            rules 21, 22
	Matched         rules 23, 24, 25, 26, 27, 28
	Unmatched       rules 29, 30, 31, 32, 33, 34
	LValue          rule  35
	LValue1         rules 36, 37, 38
	Disjunction     rules 39, 40
	Conjunction     rules 41, 42
	Compare         rules 43, 44, 45, 46, 47, 48
	ArithExpr       rules 49, 50
	Term            rules 51, 52, 53
	PrefExpr        rules 54, 55
	Factor          rules 56, 57, 58, 59, 60, 61, 62, 63, 64
	CallArgs        rules 65, 66
	CallArgsRev     rules 67, 68
	Fields          rules 69, 70
	FieldsRev       rules 71, 72
	Field           rule  73
	ExprSequence    rules 74, 75
	ExprSequenceRev rules 76, 77

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	while          shift, and enter state 10
	for            shift, and enter state 11
	if             shift, and enter state 12
	id             shift, and enter state 13

	Program        goto state 14
	Expr           goto state 2
	Matched        goto state 3
	Unmatched      goto state 4
	LValue         goto state 5
	Disjunction    goto state 6
	Conjunction    goto state 7
	Compare        goto state 8
	ArithExpr      goto state 9

State 1


	while          shift, and enter state 10
	for            shift, and enter state 11
	if             shift, and enter state 12
	id             shift, and enter state 13

	Expr           goto state 2
	Matched        goto state 3
	Unmatched      goto state 4
	LValue         goto state 5
	Disjunction    goto state 6
	Conjunction    goto state 7
	Compare        goto state 8
	ArithExpr      goto state 9

State 2

	Program -> Expr .                                   (rule 1)

	%eof           reduce using rule 1


State 3

	Expr -> Matched .                                   (rule 21)

	to             reduce using rule 21
	in             reduce using rule 21
	end            reduce using rule 21
	function       reduce using rule 21
	var            reduce using rule 21
	type           reduce using rule 21
	then           reduce using rule 21
	do             reduce using rule 21
	','            reduce using rule 21
	';'            reduce using rule 21
	')'            reduce using rule 21
	'}'            reduce using rule 21
	%eof           reduce using rule 21


State 4

	Expr -> Unmatched .                                 (rule 22)

	to             reduce using rule 22
	in             reduce using rule 22
	end            reduce using rule 22
	function       reduce using rule 22
	var            reduce using rule 22
	type           reduce using rule 22
	then           reduce using rule 22
	do             reduce using rule 22
	','            reduce using rule 22
	';'            reduce using rule 22
	')'            reduce using rule 22
	'}'            reduce using rule 22
	%eof           reduce using rule 22


State 5

	Matched -> LValue . ':=' Matched                    (rule 24)
	Unmatched -> LValue . ':=' Unmatched                (rule 29)

	':='           shift, and enter state 31


State 6

	Matched -> Disjunction .                            (rule 23)
	Disjunction -> Disjunction . '|' Conjunction        (rule 39)

	to             reduce using rule 23
	in             reduce using rule 23
	end            reduce using rule 23
	function       reduce using rule 23
	var            reduce using rule 23
	type           reduce using rule 23
	then           reduce using rule 23
	else           reduce using rule 23
	do             reduce using rule 23
	','            reduce using rule 23
	';'            reduce using rule 23
	')'            reduce using rule 23
	']'            reduce using rule 23
	'}'            reduce using rule 23
	'|'            shift, and enter state 30
	%eof           reduce using rule 23


State 7

	Disjunction -> Conjunction .                        (rule 40)
	Conjunction -> Conjunction . '&' Compare            (rule 41)

	to             reduce using rule 40
	in             reduce using rule 40
	end            reduce using rule 40
	function       reduce using rule 40
	var            reduce using rule 40
	type           reduce using rule 40
	then           reduce using rule 40
	else           reduce using rule 40
	do             reduce using rule 40
	','            reduce using rule 40
	';'            reduce using rule 40
	')'            reduce using rule 40
	']'            reduce using rule 40
	'}'            reduce using rule 40
	'&'            shift, and enter state 29
	'|'            reduce using rule 40
	%eof           reduce using rule 40


State 8

	Conjunction -> Compare .                            (rule 42)

	to             reduce using rule 42
	in             reduce using rule 42
	end            reduce using rule 42
	function       reduce using rule 42
	var            reduce using rule 42
	type           reduce using rule 42
	then           reduce using rule 42
	else           reduce using rule 42
	do             reduce using rule 42
	','            reduce using rule 42
	';'            reduce using rule 42
	')'            reduce using rule 42
	']'            reduce using rule 42
	'}'            reduce using rule 42
	'&'            reduce using rule 42
	'|'            reduce using rule 42
	%eof           reduce using rule 42


State 9

	Compare -> ArithExpr . '=' ArithExpr                (rule 43)
	Compare -> ArithExpr . '<>' ArithExpr               (rule 44)
	Compare -> ArithExpr . '>' ArithExpr                (rule 45)
	Compare -> ArithExpr . '<' ArithExpr                (rule 46)
	Compare -> ArithExpr . '>=' ArithExpr               (rule 47)
	Compare -> ArithExpr . '<=' ArithExpr               (rule 48)
	ArithExpr -> ArithExpr . '+' Term                   (rule 49)
	ArithExpr -> ArithExpr . '-' Term                   (rule 50)

	'+'            shift, and enter state 21
	'-'            shift, and enter state 22
	'='            shift, and enter state 23
	'<>'           shift, and enter state 24
	'<'            shift, and enter state 25
	'<='           shift, and enter state 26
	'>'            shift, and enter state 27
	'>='           shift, and enter state 28


State 10

	Matched -> while . Expr do Matched                  (rule 27)
	Unmatched -> while . Expr do Unmatched              (rule 33)

	while          shift, and enter state 10
	for            shift, and enter state 11
	if             shift, and enter state 12
	id             shift, and enter state 13

	Expr           goto state 20
	Matched        goto state 3
	Unmatched      goto state 4
	LValue         goto state 5
	Disjunction    goto state 6
	Conjunction    goto state 7
	Compare        goto state 8
	ArithExpr      goto state 9

State 11

	Matched -> for . id ':=' Expr to Expr do Matched    (rule 28)
	Unmatched -> for . id ':=' Expr to Expr do Unmatched    (rule 34)

	id             shift, and enter state 19


State 12

	Matched -> if . Expr then Matched else Matched      (rule 26)
	Unmatched -> if . Expr then Matched else Unmatched    (rule 31)
	Unmatched -> if . Expr then Matched                 (rule 32)

	while          shift, and enter state 10
	for            shift, and enter state 11
	if             shift, and enter state 12
	id             shift, and enter state 13

	Expr           goto state 18
	Matched        goto state 3
	Unmatched      goto state 4
	LValue         goto state 5
	Disjunction    goto state 6
	Conjunction    goto state 7
	Compare        goto state 8
	ArithExpr      goto state 9

State 13

	Matched -> id . '[' Matched ']'                     (rule 25)
	Unmatched -> id . '[' Matched ']' of Unmatched      (rule 30)
	LValue -> id . LValue1                              (rule 35)

	'['            shift, and enter state 16
	'.'            shift, and enter state 17
	':='           reduce using rule 38

	LValue1        goto state 15

State 14

	%start_parse -> Program .                           (rule 0)

	%eof           accept


State 15

	LValue -> id LValue1 .                              (rule 35)

	to             reduce using rule 35
	in             reduce using rule 35
	end            reduce using rule 35
	function       reduce using rule 35
	var            reduce using rule 35
	type           reduce using rule 35
	then           reduce using rule 35
	else           reduce using rule 35
	do             reduce using rule 35
	','            reduce using rule 35
	';'            reduce using rule 35
	')'            reduce using rule 35
	']'            reduce using rule 35
	'}'            reduce using rule 35
	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'*'            reduce using rule 35
	'/'            reduce using rule 35
	'='            reduce using rule 35
	'<>'           reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'&'            reduce using rule 35
	'|'            reduce using rule 35
	':='           reduce using rule 35
	%eof           reduce using rule 35


State 16

	Matched -> id '[' . Matched ']'                     (rule 25)
	Unmatched -> id '[' . Matched ']' of Unmatched      (rule 30)
	LValue1 -> '[' . Matched ']' LValue1                (rule 36)

	while          shift, and enter state 62
	for            shift, and enter state 63
	if             shift, and enter state 64
	id             shift, and enter state 65

	Matched        goto state 60
	LValue         goto state 61
	Disjunction    goto state 6
	Conjunction    goto state 7
	Compare        goto state 8
	ArithExpr      goto state 9

State 17

	LValue1 -> '.' . id LValue1                         (rule 37)

	id             shift, and enter state 59


State 18

	Matched -> if Expr . then Matched else Matched      (rule 26)
	Unmatched -> if Expr . then Matched else Unmatched    (rule 31)
	Unmatched -> if Expr . then Matched                 (rule 32)

	then           shift, and enter state 58


State 19

	Matched -> for id . ':=' Expr to Expr do Matched    (rule 28)
	Unmatched -> for id . ':=' Expr to Expr do Unmatched    (rule 34)

	':='           shift, and enter state 57


State 20

	Matched -> while Expr . do Matched                  (rule 27)
	Unmatched -> while Expr . do Unmatched              (rule 33)

	do             shift, and enter state 56


State 21

	ArithExpr -> ArithExpr '+' . Term                   (rule 49)

	break          shift, and enter state 47
	let            shift, and enter state 48
	nil            shift, and enter state 49
	'('            shift, and enter state 50
	'-'            shift, and enter state 51
	string         shift, and enter state 52
	int            shift, and enter state 53
	id             shift, and enter state 54

	TypeId         goto state 42
	LValue         goto state 43
	Term           goto state 55
	PrefExpr       goto state 45
	Factor         goto state 46

State 22

	ArithExpr -> ArithExpr '-' . Term                   (rule 50)

	break          shift, and enter state 47
	let            shift, and enter state 48
	nil            shift, and enter state 49
	'('            shift, and enter state 50
	'-'            shift, and enter state 51
	string         shift, and enter state 52
	int            shift, and enter state 53
	id             shift, and enter state 54

	TypeId         goto state 42
	LValue         goto state 43
	Term           goto state 44
	PrefExpr       goto state 45
	Factor         goto state 46

State 23

	Compare -> ArithExpr '=' . ArithExpr                (rule 43)


	ArithExpr      goto state 41

State 24

	Compare -> ArithExpr '<>' . ArithExpr               (rule 44)


	ArithExpr      goto state 40

State 25

	Compare -> ArithExpr '<' . ArithExpr                (rule 46)


	ArithExpr      goto state 39

State 26

	Compare -> ArithExpr '<=' . ArithExpr               (rule 48)


	ArithExpr      goto state 38

State 27

	Compare -> ArithExpr '>' . ArithExpr                (rule 45)


	ArithExpr      goto state 37

State 28

	Compare -> ArithExpr '>=' . ArithExpr               (rule 47)


	ArithExpr      goto state 36

State 29

	Conjunction -> Conjunction '&' . Compare            (rule 41)


	Compare        goto state 35
	ArithExpr      goto state 9

State 30

	Disjunction -> Disjunction '|' . Conjunction        (rule 39)


	Conjunction    goto state 34
	Compare        goto state 8
	ArithExpr      goto state 9

State 31

	Matched -> LValue ':=' . Matched                    (rule 24)
	Unmatched -> LValue ':=' . Unmatched                (rule 29)

	while          shift, and enter state 10
	for            shift, and enter state 11
	if             shift, and enter state 12
	id             shift, and enter state 13

	Matched        goto state 32
	Unmatched      goto state 33
	LValue         goto state 5
	Disjunction    goto state 6
	Conjunction    goto state 7
	Compare        goto state 8
	ArithExpr      goto state 9

State 32

	Matched -> LValue ':=' Matched .                    (rule 24)

	to             reduce using rule 24
	in             reduce using rule 24
	end            reduce using rule 24
	function       reduce using rule 24
	var            reduce using rule 24
	type           reduce using rule 24
	then           reduce using rule 24
	else           reduce using rule 24
	do             reduce using rule 24
	','            reduce using rule 24
	';'            reduce using rule 24
	')'            reduce using rule 24
	']'            reduce using rule 24
	'}'            reduce using rule 24
	%eof           reduce using rule 24


State 33

	Unmatched -> LValue ':=' Unmatched .                (rule 29)

	to             reduce using rule 29
	in             reduce using rule 29
	end            reduce using rule 29
	function       reduce using rule 29
	var            reduce using rule 29
	type           reduce using rule 29
	then           reduce using rule 29
	do             reduce using rule 29
	','            reduce using rule 29
	';'            reduce using rule 29
	')'            reduce using rule 29
	'}'            reduce using rule 29
	%eof           reduce using rule 29


State 34

	Disjunction -> Disjunction '|' Conjunction .        (rule 39)
	Conjunction -> Conjunction . '&' Compare            (rule 41)

	to             reduce using rule 39
	in             reduce using rule 39
	end            reduce using rule 39
	function       reduce using rule 39
	var            reduce using rule 39
	type           reduce using rule 39
	then           reduce using rule 39
	else           reduce using rule 39
	do             reduce using rule 39
	','            reduce using rule 39
	';'            reduce using rule 39
	')'            reduce using rule 39
	']'            reduce using rule 39
	'}'            reduce using rule 39
	'&'            shift, and enter state 29
	'|'            reduce using rule 39
	%eof           reduce using rule 39


State 35

	Conjunction -> Conjunction '&' Compare .            (rule 41)

	to             reduce using rule 41
	in             reduce using rule 41
	end            reduce using rule 41
	function       reduce using rule 41
	var            reduce using rule 41
	type           reduce using rule 41
	then           reduce using rule 41
	else           reduce using rule 41
	do             reduce using rule 41
	','            reduce using rule 41
	';'            reduce using rule 41
	')'            reduce using rule 41
	']'            reduce using rule 41
	'}'            reduce using rule 41
	'&'            reduce using rule 41
	'|'            reduce using rule 41
	%eof           reduce using rule 41


State 36

	Compare -> ArithExpr '>=' ArithExpr .               (rule 47)
	ArithExpr -> ArithExpr . '+' Term                   (rule 49)
	ArithExpr -> ArithExpr . '-' Term                   (rule 50)

	to             reduce using rule 47
	in             reduce using rule 47
	end            reduce using rule 47
	function       reduce using rule 47
	var            reduce using rule 47
	type           reduce using rule 47
	then           reduce using rule 47
	else           reduce using rule 47
	do             reduce using rule 47
	','            reduce using rule 47
	';'            reduce using rule 47
	')'            reduce using rule 47
	']'            reduce using rule 47
	'}'            reduce using rule 47
	'+'            shift, and enter state 21
	'-'            shift, and enter state 22
	'&'            reduce using rule 47
	'|'            reduce using rule 47
	%eof           reduce using rule 47


State 37

	Compare -> ArithExpr '>' ArithExpr .                (rule 45)
	ArithExpr -> ArithExpr . '+' Term                   (rule 49)
	ArithExpr -> ArithExpr . '-' Term                   (rule 50)

	to             reduce using rule 45
	in             reduce using rule 45
	end            reduce using rule 45
	function       reduce using rule 45
	var            reduce using rule 45
	type           reduce using rule 45
	then           reduce using rule 45
	else           reduce using rule 45
	do             reduce using rule 45
	','            reduce using rule 45
	';'            reduce using rule 45
	')'            reduce using rule 45
	']'            reduce using rule 45
	'}'            reduce using rule 45
	'+'            shift, and enter state 21
	'-'            shift, and enter state 22
	'&'            reduce using rule 45
	'|'            reduce using rule 45
	%eof           reduce using rule 45


State 38

	Compare -> ArithExpr '<=' ArithExpr .               (rule 48)
	ArithExpr -> ArithExpr . '+' Term                   (rule 49)
	ArithExpr -> ArithExpr . '-' Term                   (rule 50)

	to             reduce using rule 48
	in             reduce using rule 48
	end            reduce using rule 48
	function       reduce using rule 48
	var            reduce using rule 48
	type           reduce using rule 48
	then           reduce using rule 48
	else           reduce using rule 48
	do             reduce using rule 48
	','            reduce using rule 48
	';'            reduce using rule 48
	')'            reduce using rule 48
	']'            reduce using rule 48
	'}'            reduce using rule 48
	'+'            shift, and enter state 21
	'-'            shift, and enter state 22
	'&'            reduce using rule 48
	'|'            reduce using rule 48
	%eof           reduce using rule 48


State 39

	Compare -> ArithExpr '<' ArithExpr .                (rule 46)
	ArithExpr -> ArithExpr . '+' Term                   (rule 49)
	ArithExpr -> ArithExpr . '-' Term                   (rule 50)

	to             reduce using rule 46
	in             reduce using rule 46
	end            reduce using rule 46
	function       reduce using rule 46
	var            reduce using rule 46
	type           reduce using rule 46
	then           reduce using rule 46
	else           reduce using rule 46
	do             reduce using rule 46
	','            reduce using rule 46
	';'            reduce using rule 46
	')'            reduce using rule 46
	']'            reduce using rule 46
	'}'            reduce using rule 46
	'+'            shift, and enter state 21
	'-'            shift, and enter state 22
	'&'            reduce using rule 46
	'|'            reduce using rule 46
	%eof           reduce using rule 46


State 40

	Compare -> ArithExpr '<>' ArithExpr .               (rule 44)
	ArithExpr -> ArithExpr . '+' Term                   (rule 49)
	ArithExpr -> ArithExpr . '-' Term                   (rule 50)

	to             reduce using rule 44
	in             reduce using rule 44
	end            reduce using rule 44
	function       reduce using rule 44
	var            reduce using rule 44
	type           reduce using rule 44
	then           reduce using rule 44
	else           reduce using rule 44
	do             reduce using rule 44
	','            reduce using rule 44
	';'            reduce using rule 44
	')'            reduce using rule 44
	']'            reduce using rule 44
	'}'            reduce using rule 44
	'+'            shift, and enter state 21
	'-'            shift, and enter state 22
	'&'            reduce using rule 44
	'|'            reduce using rule 44
	%eof           reduce using rule 44


State 41

	Compare -> ArithExpr '=' ArithExpr .                (rule 43)
	ArithExpr -> ArithExpr . '+' Term                   (rule 49)
	ArithExpr -> ArithExpr . '-' Term                   (rule 50)

	to             reduce using rule 43
	in             reduce using rule 43
	end            reduce using rule 43
	function       reduce using rule 43
	var            reduce using rule 43
	type           reduce using rule 43
	then           reduce using rule 43
	else           reduce using rule 43
	do             reduce using rule 43
	','            reduce using rule 43
	';'            reduce using rule 43
	')'            reduce using rule 43
	']'            reduce using rule 43
	'}'            reduce using rule 43
	'+'            shift, and enter state 21
	'-'            shift, and enter state 22
	'&'            reduce using rule 43
	'|'            reduce using rule 43
	%eof           reduce using rule 43


State 42

	Factor -> TypeId . '{' Fields '}'                   (rule 62)

	'{'            shift, and enter state 86


State 43

	Factor -> LValue .                                  (rule 56)

	to             reduce using rule 56
	in             reduce using rule 56
	end            reduce using rule 56
	function       reduce using rule 56
	var            reduce using rule 56
	type           reduce using rule 56
	then           reduce using rule 56
	else           reduce using rule 56
	do             reduce using rule 56
	','            reduce using rule 56
	';'            reduce using rule 56
	')'            reduce using rule 56
	']'            reduce using rule 56
	'}'            reduce using rule 56
	'+'            reduce using rule 56
	'-'            reduce using rule 56
	'*'            reduce using rule 56
	'/'            reduce using rule 56
	'='            reduce using rule 56
	'<>'           reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'&'            reduce using rule 56
	'|'            reduce using rule 56
	%eof           reduce using rule 56


State 44

	ArithExpr -> ArithExpr '-' Term .                   (rule 50)
	Term -> Term . '*' PrefExpr                         (rule 51)
	Term -> Term . '/' PrefExpr                         (rule 52)

	to             reduce using rule 50
	in             reduce using rule 50
	end            reduce using rule 50
	function       reduce using rule 50
	var            reduce using rule 50
	type           reduce using rule 50
	then           reduce using rule 50
	else           reduce using rule 50
	do             reduce using rule 50
	','            reduce using rule 50
	';'            reduce using rule 50
	')'            reduce using rule 50
	']'            reduce using rule 50
	'}'            reduce using rule 50
	'+'            reduce using rule 50
	'-'            reduce using rule 50
	'*'            shift, and enter state 78
	'/'            shift, and enter state 79
	'='            reduce using rule 50
	'<>'           reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'&'            reduce using rule 50
	'|'            reduce using rule 50
	%eof           reduce using rule 50


State 45

	Term -> PrefExpr .                                  (rule 53)

	to             reduce using rule 53
	in             reduce using rule 53
	end            reduce using rule 53
	function       reduce using rule 53
	var            reduce using rule 53
	type           reduce using rule 53
	then           reduce using rule 53
	else           reduce using rule 53
	do             reduce using rule 53
	','            reduce using rule 53
	';'            reduce using rule 53
	')'            reduce using rule 53
	']'            reduce using rule 53
	'}'            reduce using rule 53
	'+'            reduce using rule 53
	'-'            reduce using rule 53
	'*'            reduce using rule 53
	'/'            reduce using rule 53
	'='            reduce using rule 53
	'<>'           reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	'&'            reduce using rule 53
	'|'            reduce using rule 53
	%eof           reduce using rule 53


State 46

	PrefExpr -> Factor .                                (rule 55)

	to             reduce using rule 55
	in             reduce using rule 55
	end            reduce using rule 55
	function       reduce using rule 55
	var            reduce using rule 55
	type           reduce using rule 55
	then           reduce using rule 55
	else           reduce using rule 55
	do             reduce using rule 55
	','            reduce using rule 55
	';'            reduce using rule 55
	')'            reduce using rule 55
	']'            reduce using rule 55
	'}'            reduce using rule 55
	'+'            reduce using rule 55
	'-'            reduce using rule 55
	'*'            reduce using rule 55
	'/'            reduce using rule 55
	'='            reduce using rule 55
	'<>'           reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'&'            reduce using rule 55
	'|'            reduce using rule 55
	%eof           reduce using rule 55


State 47

	Factor -> break .                                   (rule 63)

	to             reduce using rule 63
	in             reduce using rule 63
	end            reduce using rule 63
	function       reduce using rule 63
	var            reduce using rule 63
	type           reduce using rule 63
	then           reduce using rule 63
	else           reduce using rule 63
	do             reduce using rule 63
	','            reduce using rule 63
	';'            reduce using rule 63
	')'            reduce using rule 63
	']'            reduce using rule 63
	'}'            reduce using rule 63
	'+'            reduce using rule 63
	'-'            reduce using rule 63
	'*'            reduce using rule 63
	'/'            reduce using rule 63
	'='            reduce using rule 63
	'<>'           reduce using rule 63
	'<'            reduce using rule 63
	'<='           reduce using rule 63
	'>'            reduce using rule 63
	'>='           reduce using rule 63
	'&'            reduce using rule 63
	'|'            reduce using rule 63
	%eof           reduce using rule 63


State 48

	Factor -> let . Decs in ExprSequence end            (rule 64)

	in             reduce using rule 3
	function       reduce using rule 3
	var            reduce using rule 3
	type           reduce using rule 3

	Decs           goto state 85

State 49

	Factor -> nil .                                     (rule 57)

	to             reduce using rule 57
	in             reduce using rule 57
	end            reduce using rule 57
	function       reduce using rule 57
	var            reduce using rule 57
	type           reduce using rule 57
	then           reduce using rule 57
	else           reduce using rule 57
	do             reduce using rule 57
	','            reduce using rule 57
	';'            reduce using rule 57
	')'            reduce using rule 57
	']'            reduce using rule 57
	'}'            reduce using rule 57
	'+'            reduce using rule 57
	'-'            reduce using rule 57
	'*'            reduce using rule 57
	'/'            reduce using rule 57
	'='            reduce using rule 57
	'<>'           reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	'&'            reduce using rule 57
	'|'            reduce using rule 57
	%eof           reduce using rule 57


State 50

	Factor -> '(' . ExprSequence ')'                    (rule 58)

	while          shift, and enter state 10
	for            shift, and enter state 11
	if             shift, and enter state 12
	')'            reduce using rule 75
	id             shift, and enter state 13

	Expr           goto state 82
	Matched        goto state 3
	Unmatched      goto state 4
	LValue         goto state 5
	Disjunction    goto state 6
	Conjunction    goto state 7
	Compare        goto state 8
	ArithExpr      goto state 9
	ExprSequence   goto state 83
	ExprSequenceRevgoto state 84

State 51

	PrefExpr -> '-' . PrefExpr                          (rule 54)

	break          shift, and enter state 47
	let            shift, and enter state 48
	nil            shift, and enter state 49
	'('            shift, and enter state 50
	'-'            shift, and enter state 51
	string         shift, and enter state 52
	int            shift, and enter state 53
	id             shift, and enter state 54

	TypeId         goto state 42
	LValue         goto state 43
	PrefExpr       goto state 81
	Factor         goto state 46

State 52

	Factor -> string .                                  (rule 60)

	to             reduce using rule 60
	in             reduce using rule 60
	end            reduce using rule 60
	function       reduce using rule 60
	var            reduce using rule 60
	type           reduce using rule 60
	then           reduce using rule 60
	else           reduce using rule 60
	do             reduce using rule 60
	','            reduce using rule 60
	';'            reduce using rule 60
	')'            reduce using rule 60
	']'            reduce using rule 60
	'}'            reduce using rule 60
	'+'            reduce using rule 60
	'-'            reduce using rule 60
	'*'            reduce using rule 60
	'/'            reduce using rule 60
	'='            reduce using rule 60
	'<>'           reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	'&'            reduce using rule 60
	'|'            reduce using rule 60
	%eof           reduce using rule 60


State 53

	Factor -> int .                                     (rule 59)

	to             reduce using rule 59
	in             reduce using rule 59
	end            reduce using rule 59
	function       reduce using rule 59
	var            reduce using rule 59
	type           reduce using rule 59
	then           reduce using rule 59
	else           reduce using rule 59
	do             reduce using rule 59
	','            reduce using rule 59
	';'            reduce using rule 59
	')'            reduce using rule 59
	']'            reduce using rule 59
	'}'            reduce using rule 59
	'+'            reduce using rule 59
	'-'            reduce using rule 59
	'*'            reduce using rule 59
	'/'            reduce using rule 59
	'='            reduce using rule 59
	'<>'           reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	'&'            reduce using rule 59
	'|'            reduce using rule 59
	%eof           reduce using rule 59


State 54

	TypeId -> id .                                      (rule 16)
	LValue -> id . LValue1                              (rule 35)
	Factor -> id . '(' CallArgs ')'                     (rule 61)

	to             reduce using rule 38
	in             reduce using rule 38
	end            reduce using rule 38
	function       reduce using rule 38
	var            reduce using rule 38
	type           reduce using rule 38
	then           reduce using rule 38
	else           reduce using rule 38
	do             reduce using rule 38
	','            reduce using rule 38
	';'            reduce using rule 38
	'('            shift, and enter state 80
	')'            reduce using rule 38
	'['            shift, and enter state 73
	']'            reduce using rule 38
	'{'            reduce using rule 16
	'}'            reduce using rule 38
	'.'            shift, and enter state 17
	'+'            reduce using rule 38
	'-'            reduce using rule 38
	'*'            reduce using rule 38
	'/'            reduce using rule 38
	'='            reduce using rule 38
	'<>'           reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'&'            reduce using rule 38
	'|'            reduce using rule 38
	%eof           reduce using rule 38

	LValue1        goto state 15

State 55

	ArithExpr -> ArithExpr '+' Term .                   (rule 49)
	Term -> Term . '*' PrefExpr                         (rule 51)
	Term -> Term . '/' PrefExpr                         (rule 52)
